--- a/index.html
+++ b/index.html
@@ -9,14 +9,26 @@
   <body>
     <main>
       <h1>Caesar Cipher</h1>
-      <input type="text" data-js="text" class="text" />
+      <input
+        type="text"
+        data-js="text"
+        class="text"
+        placeholder="write text..."
+      />
+      <input
+        type="number"
+        step="1"
+        data-js="key"
+        min="1"
+        max="25"
+        placeholder="key"
+      />
       <div class="wrapper">
         <input type="submit" value="DECODER" onclick="decoder()" />
         <input type="submit" value="ENCODER" onclick="encoder()" />
       </div>
       <div class="output" data-js="output"></div>
     </main>
-
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
